fix overflow by putting it on HTML element

--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -32,6 +32,7 @@ dd {
 /* Set core root defaults */
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 /* Set core body defaults */
